# verbatim

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
docs/: index.html
docs/design/: README.md  bundle.jsx  chat-original.md  verbatim.html
examples/: run_example.sh  sample_transcript.txt
packaging/homebrew/: TAP_SETUP.md  verbatim-ai.rb
scripts/: push-env.sh
src/verbatim/: __init__.py  ask.py  cli.py  contradictions.py  cost.py  deadlines.py  email_digest.py  extractor.py  graph.py  llm.py  mcp_server.py  prompts.py  reconcile.py  renderers.py  schema.py  simplify.py  slack_bot.py  state.py  store.py  transcripts.py  web.py
src/verbatim/connectors/: __init__.py  calendar.py  github_pr.py  slack_api.py  slack_common.py  slack_export.py
src/verbatim/projections/: __init__.py  github_issues.py  jira.py  linear.py
tests/: conftest.py  test_ask.py  test_calendar.py  test_codes_and_channels.py  test_consistency.py  test_contradictions.py  test_cost.py  test_deadlines.py  test_design.py  test_email_digest.py  test_github_jira_projections.py  test_github_pr.py  test_graph.py  test_linear.py  test_ollama_backend.py  test_person.py  test_proactive.py  test_reconcile.py  test_relationships.py  test_renderers.py  test_schema.py  test_search.py  test_simplify.py  test_slack_api.py  test_slack_bot.py  test_slack_export.py  test_slack_hitl.py  test_slack_modal.py  test_state.py  test_store.py  test_transcripts.py  test_watch.py  test_web.py
tests/fixtures/slack_export_dir/: users.json
tests/fixtures/slack_export_dir/general/: 2026-05-18.json
tests/fixtures/slack_export_dir/random/: 2026-05-18.json
