[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verbatim"
version = "0.1.0"
description = "The AI memory layer for engineering teams. Extracts structured commitments, decisions, open questions, and blockers from meeting transcripts — every extraction sourced to a verbatim quote."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Verbatim contributors" }]
keywords = ["meetings", "transcripts", "llm", "claude", "team-coordination", "action-items"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
verbatim = "verbatim.cli:app"
verbatim-mcp = "verbatim.mcp_server:main"

[project.urls]
Homepage = "https://github.com/qatcod/verbatim"
Issues = "https://github.com/qatcod/verbatim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/verbatim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
