[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verbatim-ai"
version = "0.11.2"
description = "The AI memory layer for engineering teams. Extracts structured commitments, decisions, open questions, and blockers from meeting transcripts — every extraction sourced to a verbatim quote."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Verbatim contributors" }]
keywords = ["meetings", "transcripts", "llm", "claude", "team-coordination", "action-items"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "slack-sdk>=3.27.0",
    "websocket-client>=1.6.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.5.0",
    "starlette>=0.36.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
verbatim = "verbatim.cli:app"
verbatim-mcp = "verbatim.mcp_server:main"

[project.urls]
Homepage = "https://github.com/qatcod/verbatim"
Issues = "https://github.com/qatcod/verbatim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/verbatim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:asyncio"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: typer.Option/typer.Argument as defaults is the framework's documented API
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Long instructional strings — the system prompt and Pydantic Field descriptions
# read better as single lines than wrapped, even when over 120 chars.
"src/verbatim/prompts.py" = ["E501"]
"src/verbatim/schema.py" = ["E501"]
# CSS rules and HTML f-strings; breaking these mid-line hurts readability
# more than the line-length budget helps.
"src/verbatim/web.py" = ["E501"]
"src/verbatim/email_digest.py" = ["E501"]
